--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 /****************** STRUTTURA HEADER *********************/
 header {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: rgb(109, 208, 208);
     padding: 1.2rem;
 }
