--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 /****************** STRUTTURA HEADER *********************/
@@ -9,17 +10,26 @@ header {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(109, 208, 208);
     padding: 1.2rem;
+    background-image: url(./img/jumbo.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
 
-.container-header {
+.nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: orange;
     width: 900px;
 
+}
+
+.container .jumbo-block {
+    width: 650px;
+    height: 350px;
+    background-color: rgb(204, 166, 240);
+    border-radius: 5px;
 }
 
 header ul {
@@ -27,20 +37,28 @@ header ul {
     justify-content: center;
     list-style: none;
     gap: 1rem;
-    width: 60%;
 }
 
 header span {
     display: inline-block;
-    width: 20%;
+}
+
+ul li a {
+    text-decoration: none;
+    color: white;
 }
 
 .login {
-    text-align: right;
+    /* text-align: right; */
+    color: black;
+    border: none;
+    border-radius: 15px;
+    background-color: white;
+    padding: 0.7em;
+    font-size: 13px;
 }
 
-header ul,
-header span {
+header ul{
     padding: 0.4rem;
 }
 
@@ -59,21 +77,11 @@ main {
     justify-content: center;
 }
 
-.border {
+/* .border {
     border: 2px dashed black;
-}
+} */
 
-.bg-blue {
-    background-color: blue;
-    padding: 2.5rem;
-}
 
-.container .jumbo-block {
-    width: 650px;
-    height: 350px;
-    background-color: rgb(204, 166, 240);
-    border-radius: 5px;
-}
 
 .bg-white {
     background-color: white;
@@ -131,7 +139,8 @@ footer {
     align-items: center;
     background-color: rgb(26, 26, 26);
 }
-hr{
+
+hr {
     width: 100%;
 }
 
