--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ main {
 
 
 .padd {
-    padding: 2.5rem 0;
+    padding: 2.7rem 0;
     gap: 5rem;
 }
 
@@ -112,7 +112,6 @@ main {
 
 .big-block img {
     width: 100%;
-    vertical-align: top;
 }
 
 .small-block {
@@ -123,26 +122,36 @@ main {
     padding-top: 1.45rem;
 }
 
-.small-block h2 {
+.bg-grey {
+    background-color: #f6f6f6;
+    /* background-image: url(./img/wave.svg); */
+    background-size: contain;
+}
+
+.h2-size {
     font-size: 2.5rem;
 }
 
-.small-block p {
+.generic-lh-p {
     line-height: 1.6rem;
     padding-top: 1.5rem;
 }
-
-.bg-grey {
-    background-color: #f6f6f6;
-    padding: 2.5rem;
-    background-image: url(./img/wave.svg);
-    background-size: contain;
+.mac-2{
+    color: white;
+    background-color: #8ea1e2;
 }
 
 .bigger-block {
     width: 900px;
-    height: 750px;
-    background-color: green;
+    text-align: center;
+
+}
+.bigger-block h3{
+    background-image: url(./img/stars.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 1.6rem;
+    display: inline;
 }
 
 .bg-dark {
