--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     padding: 1.2rem;
     background-image: url(./img/jumbo.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
 }
 
@@ -136,7 +136,8 @@ main {
     line-height: 1.6rem;
     padding-top: 1.5rem;
 }
-.mac-2{
+
+.mac-2 {
     color: white;
     background-color: #8ea1e2;
 }
@@ -146,7 +147,8 @@ main {
     text-align: center;
 
 }
-.bigger-block h3{
+
+.bigger-block h3 {
     background-image: url(./img/stars.svg);
     background-size: contain;
     background-repeat: no-repeat;
